build: Update Loom, create run config